--- a/0326_assignment1/styles/mportpolio.css
+++ b/0326_assignment1/styles/mportpolio.css
@@ -12,31 +12,33 @@
   background: black;
 }
 
-.main-header {
+.spacer {
+  height: 15%;
+}
+
+.title {
   display: flex;
   flex-direction: column;
   width: fit-content;
   margin: 0 auto;
-  height: 35%;
   color: white;
 }
 
-.main-header div {
+.title div {
   margin: auto;
 }
 
-.main-header div h1 {
+.title div h1 {
   text-align: center;
   font-size: 5rem;
 }
 
-.main-header div div {
+.title div div {
   text-align: right;
   font-size: 2rem;
 }
 
 .main-navigator {
-  height: 75%;
   display: flex;
   flex-direction: column;
   width: fit-content;
