--- a/0326_assignment1/styles/index.css
+++ b/0326_assignment1/styles/index.css
@@ -1,13 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  list-style: none;
-}
+/* mobile */
+@media (min-width: 320px) and (max-width: 480px) {
+  * {
+    font-size: 10px;
+  }
 
-a {
-  text-decoration: none;
-  color: black;
+  .linker-container {
+    width: 255px;
+  }
 }
 
 .app {
@@ -41,7 +40,7 @@ a {
   font-size: 1.5rem;
 }
 
-.navigation {
+.linker-container {
   display: flex;
   flex-direction: column;
   width: 400px;
@@ -62,15 +61,4 @@ a {
 .linker:hover {
   background: black;
   color: white;
-}
-
-/* mobile */
-@media (min-width: 320px) and (max-width: 480px) {
-  * {
-    font-size: 10px;
-  }
-
-  .navigation {
-    width: 255px;
-  }
 }
