styles: navigation hover 애니메이션 추가

--- a/0326_assignment1/styles/common.css
+++ b/0326_assignment1/styles/common.css
@@ -44,6 +44,13 @@ a {
 }
 
 .navigation a {
+  padding: 8px;
+  border-radius: 50px;
   color: white;
+  transition: all 0.5s;
 }
 
+.navigation a:hover {
+  color: black;
+  background: white;
+}
