feat: nav-spacer를 통한 상단 navigation 위치 공백 생성

--- a/0326_assignment1/styles/common.css
+++ b/0326_assignment1/styles/common.css
@@ -21,6 +21,7 @@ a {
 }
 .app {
   display: flex;
+  flex-direction: column;
 }
 
 .navigation {
@@ -53,4 +54,8 @@ a {
 .navigation a:hover {
   color: black;
   background: white;
+}
+
+.nav-spacer {
+  height: 50px;
 }
