styles: 모바일 시 네비게이터 정렬 변경

--- a/0326_assignment1/styles/index.css
+++ b/0326_assignment1/styles/index.css
@@ -62,3 +62,10 @@
   background: black;
   color: white;
 }
+
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .linker-container {
+    width: 255px;
+  }
+}
