--- a/0326_assignment1/styles/common.css
+++ b/0326_assignment1/styles/common.css
@@ -1,13 +1,3 @@
-@media (min-width: 320px) and (max-width: 480px) {
-  * {
-    font-size: 10px;
-  }
-
-  .linker-container {
-    width: 255px;
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -58,4 +48,10 @@ a {
 
 .nav-spacer {
   height: 50px;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .navigation {
+    justify-content: center;
+  }
 }
