--- a/0326_assignment1/styles/about.css
+++ b/0326_assignment1/styles/about.css
@@ -1,9 +1,3 @@
-.main {
-  margin: auto;
-  padding: 20px;
-  width: 60%;
-}
-
 .title {
   font-size: 3rem;
   margin-bottom: 10px;
@@ -11,12 +5,11 @@
 
 .profile {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
 }
 
 .profile img {
   width: 20%;
-  margin-right: 20px;
 }
 
 .profile h1 {
@@ -41,4 +34,18 @@
 
 .introduce p {
   margin-bottom: 10px;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact i {
+  font-size: 1.5rem;
+  width: 2rem;
+}
+
+.contact b{
+  font-size: 1.2em;
 }
