--- a/0326_assignment1/styles/about.css
+++ b/0326_assignment1/styles/about.css
@@ -1,10 +1,11 @@
 .title {
+  margin: 30px;
   font-size: 3rem;
-  margin-bottom: 10px;
 }
 
 .profile {
   display: flex;
+  margin-bottom: 100px;
   justify-content: space-between;
 }
 
@@ -39,6 +40,11 @@
 .contact {
   display: flex;
   flex-direction: column;
+  margin-right: 20px;
+}
+
+.contact span {
+  margin-bottom: 20px;
 }
 
 .contact i {
@@ -46,6 +52,43 @@
   width: 2rem;
 }
 
-.contact b{
+.contact b {
   font-size: 1.2em;
+}
+
+.skills {
+  padding: 0 20px;
+  display: flex;
+}
+
+.skills h2 {
+  width: 100%;
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+}
+
+.skill-box {
+  flex-basis: 33.33%;
+}
+
+.skill-box.center {
+  margin: 0 30px;
+  padding: 0 30px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
+.skill {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  font-size: 1.1rem;
+}
+
+.skill img {
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 0 #a5a5a5;
 }
