--- a/0326_assignment1/styles/common.css
+++ b/0326_assignment1/styles/common.css
@@ -54,7 +54,7 @@ a {
 .main {
   margin: auto;
   padding: 20px;
-  width: 60%;
+  width: 60vw;
   height: 100vh;
   background: white;
   box-shadow: 0 0 1000px 50px white;
@@ -67,14 +67,14 @@ sub {
   font-size: 0.7em;
 }
 
-/* mobile */
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 1400px) {
   .navigation {
     justify-content: center;
   }
+}
 
+@media (max-width: 1100px) {
   .main {
     width: 90vw;
-    overflow-x: hidden;
   }
 }
