styles: index page 모바일 스타일 수정

--- a/0326_assignment1/styles/index.css
+++ b/0326_assignment1/styles/index.css
@@ -52,8 +52,11 @@
   color: white;
 }
 
-
 @media (min-width: 320px) and (max-width: 480px) {
+  * {
+    font-size: 12px;
+  }
+
   .linker-container {
     width: 255px;
   }
