--- a/0326_assignment1/styles/common.css
+++ b/0326_assignment1/styles/common.css
@@ -54,8 +54,8 @@ a {
 
 .main {
   margin: auto;
-  padding: 20px;
-  width: 60vw;
+  padding: 20px 50px;
+  width: 70vw;
   background: white;
   box-shadow: 0 0 1000px 50px white;
 }
@@ -75,6 +75,7 @@ sub {
 
 @media (max-width: 1100px) {
   .main {
-    width: 90vw;
+    padding: 20px;
+    width: 85vw;
   }
 }
