--- a/0326_assignment1/styles/project.css
+++ b/0326_assignment1/styles/project.css
@@ -46,7 +46,7 @@
 }
 
 .project-detail h2 {
-  margin-bottom: 15px;
+  margin: 15px 0;
   font-size: 1.8rem;
 }
 
@@ -64,5 +64,41 @@
 }
 
 .project-stack li {
-  margin: 5px 0;
+  margin: 10px 0;
+}
+
+@media (max-width: 480px) {
+  .link-container {
+    float: none;
+  }
+
+  .title span {
+    display: block;
+    margin: 0;
+  }
+
+  .project-describe {
+    font-size: 1.2rem;
+  }
+
+  .project-describe b {
+    display: block;
+  }
+
+  .project-info {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-contribute li {
+    margin-right: 0;
+  }
+
+  .project-contribute li li {
+    margin-right: 0;
+  }
+
+  .project-stack b {
+    display: block;
+  }
 }
