--- a/0326_assignment1/styles/about.css
+++ b/0326_assignment1/styles/about.css
@@ -94,7 +94,7 @@
   box-shadow: 0 0 5px 0 #a5a5a5;
 }
 
-@media (max-width: 1005px) {
+@media (min-width: 480px) and (max-width: 1005px) {
   .me {
     display: none;
   }
@@ -110,6 +110,10 @@
 }
 
 @media (max-width: 480px) {
+  .me {
+    display: none;
+  }
+
   .profile {
     flex-direction: column;
     margin-bottom: 10px;
@@ -117,7 +121,6 @@
 
   .contact {
     margin-top: 20px;
-    margin-left: 30px;
   }
 
   .skills {
