styles: 모바일, 태블릿에 맞춰 수정

--- a/0326_assignment1/styles/common.css
+++ b/0326_assignment1/styles/common.css
@@ -80,6 +80,10 @@ sub {
 }
 
 @media (max-width: 480px) {
+  .title {
+    font-size: 2rem;
+  }
+
   .navigation {
     justify-content: center;
   }
